// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders correctly 1`] = `
ShallowWrapper {
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <SortingContainer
    results={
      Array [
        Object {},
      ]
    }
    searchTerm="test"
    setSort={[MockFunction]}
    sortDirection="asc"
    sortField="field"
    sortOptions={
      Array [
        Object {
          "direction": "asc",
          "name": "name",
          "value": "field",
        },
        Object {
          "direction": "desc",
          "name": "name",
          "value": "field",
        },
      ]
    }
  />,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateError": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "function",
    "props": Object {
      "onChange": [Function],
      "options": Array [
        Object {
          "name": "name",
          "value": "field|||asc",
        },
        Object {
          "name": "name",
          "value": "field|||desc",
        },
      ],
      "value": "field|||asc",
    },
    "ref": null,
    "rendered": null,
    "type": [Function],
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "function",
      "props": Object {
        "onChange": [Function],
        "options": Array [
          Object {
            "name": "name",
            "value": "field|||asc",
          },
          Object {
            "name": "name",
            "value": "field|||desc",
          },
        ],
        "value": "field|||asc",
      },
      "ref": null,
      "rendered": null,
      "type": [Function],
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
        "lifecycles": Object {
          "componentDidUpdate": Object {
            "onSetState": true,
          },
          "getDerivedStateFromProps": true,
          "getSnapshotBeforeUpdate": true,
          "setState": Object {
            "skipsComponentDidUpdateOnNullish": true,
          },
        },
      },
    },
  },
}
`;

exports[`renders empty when it doesn't have enough data 1`] = `
ShallowWrapper {
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <SortingContainer
    results={Array []}
    searchTerm=""
    setSort={[MockFunction]}
    sortDirection="asc"
    sortField="field"
    sortOptions={
      Array [
        Object {
          "direction": "asc",
          "name": "name",
          "value": "field",
        },
        Object {
          "direction": "desc",
          "name": "name",
          "value": "field",
        },
      ]
    }
  />,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateError": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): null,
  Symbol(enzyme.__nodes__): Array [
    null,
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
        "lifecycles": Object {
          "componentDidUpdate": Object {
            "onSetState": true,
          },
          "getDerivedStateFromProps": true,
          "getSnapshotBeforeUpdate": true,
          "setState": Object {
            "skipsComponentDidUpdateOnNullish": true,
          },
        },
      },
    },
  },
}
`;
